Header no longer sticky & improved player size on mobile devices

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,9 +7,12 @@ body {
 	height: 100%;
 }
 
-header {
-	position: fixed;
-	top: 0;
+#main {
+	height: calc(100% - 150px);
+	overflow-y: auto;
+}
+
+#nav {
 	width: 100%;
 	height: 65px;
 	padding: 10px 20px;
@@ -26,12 +29,6 @@ header {
 	line-height: 45px;
 }
 
-#content {
-	height: calc(100% - 65px - 150px);
-	margin-top: 65px;
-	overflow-y: auto;
-}
-
 footer {
 	position: fixed;
 	bottom: 0;
@@ -40,7 +37,6 @@ footer {
 	padding: 15px;
 	background-color: #333;
 	color: white;
-	text-align: center;
 }
 
 #player-song {
@@ -49,6 +45,7 @@ footer {
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	text-align: center;
 }
 
 #song-name {
@@ -59,6 +56,7 @@ footer {
 	height: 40px;
 	font-size: 1.5em;
 	user-select: none;
+	text-align: center;
 }
 
 #controls-prev, #controls-play, #controls-next {
@@ -71,6 +69,7 @@ footer {
 	height: 40px;
 	font-size: 1.5em;
 	user-select: none;
+	text-align: center;
 }
 
 #progress-elapsed, #progress-total {
@@ -108,8 +107,8 @@ footer {
 
 #fab {
 	position: fixed;
-	bottom: 170px;
-	right: 20px;
+	bottom: 150px;
+	right: 0;
 }
 
 #fab-add {
@@ -122,18 +121,6 @@ footer {
 
 #fab-add:hover {
 	background-position: bottom;
-}
-
-div.nav {
-	font-size: 32px;
-	color: #fff;
-	background-color: #f71;
-	height: 48px;
-	max-height: 48px;
-	padding: 0px 12px;
-	display: block;
-	width:100%;
-	position:fixed;
 }
 
 div.pane {
@@ -149,16 +136,10 @@ a.fill {
 	width: 80%;
 	text-decoration: none;
 }
+
 a.fill:hover {
 	color: #fff;
 	text-decoration: none;
-}
-
-div.menu {
-	float:right;
-	display: block;
-	text-align: right;
-	width: 40px;
 }
 
 div.q {
@@ -189,28 +170,53 @@ td.num {
 	padding-left: 16px;
 }
 
-div.bottomfloat {
-	position:fixed;
-	left:0px;
-	bottom:0px;
-	width:100%;
+@media only screen and (max-width: 736px) and (orientation:portrait) {
+	#main {
+		height: calc(100% - 130px);
+	}
+
+	#fab {
+		bottom: 130px;
+	}
+
+	footer {
+		height: 130px;
+		padding: 5px 10px;
+	}
 }
 
-div.footer {
-	height:48px;
-	width:100%;
-	background-color: #bbb;
-	padding: 7px 0px;
-}
+@media only screen and (max-width: 736px) and (orientation:landscape) {
+	#main {
+		height: 70%;
+	}
 
-p.footer {
-	text-align: center;
-	text-decoration:bold;
-	color: #222;
-	font-size:16px;
-	line-height: 60%
-}
+	#fab {
+		bottom: 30%;
+	}
 
-p.tracker {
-	font-family:'Lucida Console', monospace;
+	footer {
+		height: 30%;
+		padding: 5px 10px;
+	}
+
+	#player-song {
+		display: inline-block;
+		width: 70%;
+		height: 45%;
+	}
+
+	#player-controls {
+		display: inline-block;
+		width: 30%;
+		vertical-align: top;
+		height: 45%;
+	}
+
+	#player-progress {
+		height: 45%;
+	}
+
+	#progress-bar {
+		width: 70%;
+	}
 }
